ARPobservation 1.2
=======================
* Added observation filter and random data generation for augmented interval recording procedure.
* Added plot method for simulated behavior_stream objects.
* Added ARPsimulator shiny interface for designing observation recording procedures.

ARPobservation 1.1
=======================
* Added utility functions for directly simulating MTS, PIR, and WIR data. 
* Added log-response ratio effect size estimators.
* Added various estimators for summarized PIR data.
* Added study_planning demo

ARPobservation 1.0
=======================

* First version released on CRAN.